-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
None
-
6.10.0 FF
-
db733a992 (6.9), 58e07225a (6.9), 5a6b412be (6.9), bc146c999 (dev), e210f2ff9 (dev), 97ae4c79b (dev), 1906feaf9 (6.8), f1ba190fc (6.8), f85c45f38 (6.8)
/home/qt/work/qt/qt5compat/src/core5/codecs/qeuckrcodec.cpp:43: (qdoc) warning: Cannot find base function for '\reimp' in convertFromUnicode()
[The function either doesn't exist in any base class with the same signature or it exists but isn't virtual.]
/home/qt/work/qt/qt5compat/src/core5/codecs/qeuckrcodec.cpp:3318: (qdoc) warning: Cannot find base function for '\reimp' in convertFromUnicode()
[The function either doesn't exist in any base class with the same signature or it exists but isn't virtual.]
/home/qt/work/qt/qt5compat/src/core5/codecs/qeuckrcodec.cpp:3397: (qdoc) warning: Cannot find base function for '\reimp' in convertToUnicode()
[The function either doesn't exist in any base class with the same signature or it exists but isn't virtual.]
/home/qt/work/qt/qt5compat/src/core5/codecs/qgb18030codec.cpp:29: (qdoc) warning: Cannot find base function for '\reimp' in convertFromUnicode()
[The function either doesn't exist in any base class with the same signature or it exists but isn't virtual.]
/home/qt/work/qt/qt5compat/src/core5/codecs/qtextcodec.cpp:307: (qdoc) warning: Cannot find 'QTextCodec::ConversionFlags' specified with '\typealias' in any header file
/home/qt/work/qt/qt5compat/src/core5/codecs/qtextcodec.cpp:318: (qdoc) warning: Cannot find 'QTextCodec::ConverterState' specified with '\typealias' in any header file
QDoc: error: Documentation warnings (6) exceeded the limit (0) for 'QtCore5Compat'.
Details: https://testresults.qt.io/coin/integration/qt/qt5compat/tasks/1739946739
Tested changes (refs/builds/qtci/dev/1739941494):
https://codereview.qt-project.org/c/qt/qt5compat/+/625361/3 Update dependencies on 'dev' in qt/qt5compat
| For Gerrit Dashboard: QTBUG-133892 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 626061,4 | doc: Remove invalid reimp commands | 6.9 | qt/qt5compat | Status: MERGED | +2 | 0 |
| 626062,4 | doc: Add qtquick as a documentation dependency | 6.9 | qt/qt5compat | Status: MERGED | +2 | 0 |
| 626252,5 | doc: Remove ConversionFlags and ConverterState documentation | 6.9 | qt/qt5compat | Status: MERGED | +2 | 0 |
| 626728,2 | doc: Remove ConversionFlags and ConverterState documentation | dev | qt/qt5compat | Status: MERGED | +2 | 0 |
| 626729,2 | doc: Add qtquick as a documentation dependency | dev | qt/qt5compat | Status: MERGED | +2 | 0 |
| 626747,2 | doc: Add qtquick as a documentation dependency | 6.8 | qt/qt5compat | Status: MERGED | +2 | 0 |
| 626748,2 | doc: Remove ConversionFlags and ConverterState documentation | 6.8 | qt/qt5compat | Status: MERGED | +2 | 0 |