doc: Remove ConversionFlags and ConverterState documentation

ConversionFlag enum values are documented as a type alias under its
corresponding QFlags class.
ConverterState has an empty typealias documentation.

Both are only built, if Qt is configured without QT_CONFIG(textcodec).
The documentation, however, is built unconditionally.

Wrapping documentation in an ifdef still results in warnings.
Remove documentation altogether, because enum values are
self-explanatory.

Task-number: QTBUG-133892
Change-Id: I870effd6654f0cda161e2128ccb9e51ac491a34b
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>
(cherry picked from commit db733a992e52336527a880cddf27fc81695a11ec)
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 97ae4c79bffa7acbc8bb81187f1a2a6c77debb60)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>