src/core5/codecs/qtextcodec.cpp
@@ -305,21 +305,6 @@ static void setup() {}
 #endif // icu
 
 /*!
-    \typealias QTextCodec::ConversionFlags
-
-    \value DefaultConversion  No flag is set.
-    \value ConvertInvalidToNull  If this flag is set, each invalid input
-                                 character is output as a null character.
-    \value IgnoreHeader  Ignore any Unicode byte-order mark and don't generate any.
-
-    \omitvalue FreeFunction
-*/
-
-/*!
-    \typealias QTextCodec::ConverterState
-*/
-
-/*!
     \class QTextCodec
     \inmodule QtCore5Compat
     \brief The QTextCodec class provides conversions between text encodings.
